<resources>
    <!--  ACTIVITY LOGIN  -->
    <string name="app_name">Dezconto-prot</string>
    <string name="btnEntrar">ENTRAR</string>
    <string name="btnLojista">CRIAR CONTA</string>
    <string name="senhaL">Senha</string>
    <string name="emailL">Email </string>
    <string name="switchManter">Manter conectado? </string>

    <!-- Strings CadastroActivity -->
    <string name="nome">Nome Completo</string>
    <string name="senha">Senha</string>
    <string name="senha2">Confirme sua senha</string>
    <string name="email">Email</string>
    <string name="btnConfirmar">CONFIRMAR</string>
    <string name="btnSair">SAIR</string>

    <!-- IMAGENS CONTENTS -->
    <string name="imgbg">imagebg</string>
    <string name="imgManUser">ico_man_user</string>
    <string name="imgkeypass">ico_key_pass</string>
    <string name="imgenter">ico_entrar</string>
    <string name="imggooglefa">ico_fa_google</string>
    <string name="gradient_image">gradient_image</string>

    <!-- Activity Conta -->
    <string name="changePass">Mudar senha</string>
    <string name="delAcc">Deletar conta</string>
    <string name="sairApp">Sair</string>
    <string name="title_activity_nav_bottom">NavBottom</string>

    <!-- Butoom nav -->
    <string name="tittle_cp">CUPONS</string>
    <string name="tittle_fav">FAVORITOS</string>
    <string name="tittle_acc">CONTA</string>
    <string name="title_activity_bottom_nav">BottomNav</string>


    <!-- ListView Cupons -->
    <string name="btnPegar">PEGAR</string>
    <string name="cp_qtd">QUANTIDADE: </string>


</resources>
