<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/btnThemes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/coloBgLogin"
    tools:context="com.dezconto.dezconto_prot.views.Conta">


    <Button
        android:background="@color/colorWhite"
        android:id="@+id/btnChangePass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/changePass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_marginTop="200dp"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="243dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:background="@color/colorWhite"
        android:id="@+id/btnDelAcc"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/delAcc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnChangePass"
        android:layout_marginTop="20dp"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="312dp" />

    <Button
        android:background="@color/colorWhite"
        android:id="@+id/btnSair"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/sairApp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDelAcc"
        android:layout_marginTop="20dp"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="383dp" />
</android.support.constraint.ConstraintLayout>
